Added nav bar and social buttons. no functionality yet.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,38 @@
     <meta charset="UTF-8" />
     <link rel="icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+    
     <title>Maggie Jiu</title>
   </head>
   <body>
-    <div id="nav-bar">About Works Journey Gallery</div>
-    <div id="intro">Maggie Jiu</div>
-    <div id="contacts">Linkedin Github Resume Email</div>
-    <div id="projects">Syphos Spinterest Kit Tac Toe</div>
-    <div id="experience">work</div>
+    <div id="navbar">
+        <button class="nav-button" id="about-button">
+            About
+        </button>
+        <button class="nav-button" id="projects-button">
+            Projects
+        </button>
+        <button class="nav-button" id="experience-button">
+            Experience
+        </button>
+        <button class="nav-button" id="gallery-button">
+            Gallery
+        </button>
+    </div>
+    <section id="intro">MAGGIE JIU</section>
+    <section id="socials">
+        <button class="socials-button" id="linkedin-button">
+            <img src="/src/assets/linkedin.png"/>
+        </button>
+        <button class="socials-button" id="github-button">
+            <img src="/src/assets/github.png"/>
+        </button>
+        <button class="socials-button" id="email-button">
+            <img src="/src/assets/email.png"/>
+        </button>
+    </section>
     <div class="gradient-bg">
         <svg>
             <filter id="grain">
