Completed layout for project section, functional artwork gallery

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             Experience
         </button>
         <button class="nav-button" id="gallery-button">
-            Gallery
+            Artworks
         </button>
     </div>
 
@@ -39,7 +39,7 @@
             <img src="/src/assets/email.png" />
         </button>
     </section>
-
+        
     <section id="about">
         <header>
             <h1 class="h1">ABOUT</h1>
@@ -50,56 +50,65 @@
                 I have a strong foundation in web development, with experience in both front-end and back-end
                 technologies. I am always eager to learn new skills and take on new challenges.</p>
         </div>
+    </section>
 
 
-        <section id="projects">
-            <header>
-                <h1 class="h1">PROJECTS</h1>
-            </header>
-            <div id="p1">
+    <section id="projects">
+        <h1 class="h1">PROJECTS</h1>
+
+
+        <div class="project-item">
+            <video class="project-demo" src="/src/assets/spinterest.mov" autoplay muted loop playsinline></video>
+            <ul class="bullet-points">
                 <h2 class="h2">SPINTEREST</h2>
-                <video class="project-demo" src="/src/assets/spinterest.mov" autoplay loop playsinline></video>
-                <ul class="bullet-points">
-                    <li>Sleek Pinterest-inspired web app to simplify curating visual ideas, featuring infinite scrolling
-                        image feeds and real-time search powered by the Unsplash API.</li>
-                    <li>Implemented custom pin creation and cataloging functionality using React state management and
-                        dynamic UI components.</li>
-                    <li>Integrated secure, multi-device user authentication using Firebase, with persistent session
-                        handling
-                        and form validation.</li>
-                </ul>
-            </div>
-            <div id="p2">
+                <li>Sleek Pinterest-inspired web app to simplify curating visual ideas, featuring infinite scrolling
+                    image feeds and real-time search powered by the Unsplash API.</li>
+                <li>Implemented custom pin creation and cataloging functionality using React state management and
+                    dynamic UI components.</li>
+                <li>Integrated secure, multi-device user authentication using Firebase, with persistent session
+                    handling
+                    and form validation.</li>
+            </ul>
+        </div>
+
+        <div class="project-item">
+            <video class="project-demo" src="/src/assets/syphos.mov" autoplay muted loop playsinline></video>
+            <ul class="bullet-points">
                 <h2 class="h2">SYPHOS</h2>
-                <video class="project-demo" src="/src/assets/syphos.mov" autoplay loop playsinline></video>
-                <ul class="bullet-points">
-                    <li>A clean, distraction-free web-based writing app with real-time text-clearing mechanic triggered
-                        by
-                        user inactivity to gamify focus and overcome writer’s block.</li>
-                    <li>Designed accessibly-focused interface with JavaScript and HTML/CSS, featuring multiple UI modes
-                        for
-                        diverse user needs.</li>
-                    <li>Developed a RESTful API using Express and Node.js to serve AI-generated story topics.</li>
-                </ul>
-            </div>
-            <div id="p3">
+                <li>A clean, distraction-free web-based writing app with real-time text-clearing mechanic triggered
+                    by
+                    user inactivity to gamify focus and overcome writer’s block.</li>
+                <li>Designed accessibly-focused interface with JavaScript and HTML/CSS, featuring multiple UI modes
+                    for
+                    diverse user needs.</li>
+                <li>Developed a RESTful API using Express and Node.js to serve AI-generated story topics.</li>
+            </ul>
+        </div>
+
+
+        <div class="project-item">
+            <video class="project-demo" src="/src/assets/kit-tac-toe.mov" autoplay muted loop playsinline></video>
+            <ul class="bullet-points">
                 <h2 class="h2">KIT TAC TOE</h2>
-                <video class="project-demo" src="/src/assets/kit-tac-toe.mov" autoplay loop playsinline></video>
-                <ul class="bullet-points">
-                    <li>Crafted a Unity mini-game in C# with a strong emphasis on artistic presentation and responsive
-                        mechanics.</li>
-                </ul>
-            </div>
-        </section>
+                <li>Crafted a Unity mini-game in C# with a strong emphasis on artistic presentation and responsive
+                    mechanics.</li>
+            </ul>
+        </div>
+    </section>
 
-        <section id="experience">
-            <header>
-                <h1 class="h1">EXPERIENCE</h1>
-            </header>
-        </section>
+    <section id="experience">
+            <h1 class="h1">EXPERIENCE</h1>
+            <section id="work"> 
+                <h2 class="h2">WORK</h2>
+            </section>
+            <section id="education">
+                <h2 class="h2">EDUCATION</h2>
+            </section>
+    </section>
 
-        <section id="gallery">
-        </section>
+    <section id="gallery">
+        <h1 class="h1">ARTWORKS</h1>
+        <div class="gallery"></div>
     </section>
 
     <div class="gradient-bg">
